--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.11"
+        python-version: "3.12"
 
     - name: Install uv
       uses: astral-sh/setup-uv@v3
@@ -23,7 +23,7 @@ jobs:
         version: latest
 
     - name: Cache uv dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           ~/.cache/uv
@@ -49,35 +49,31 @@ jobs:
       #   UV_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
 
     - name: Create GitHub Release
-      uses: actions/create-release@v1
+      run: |
+        gh release create ${{ github.ref_name }} \
+          --title "Release ${{ github.ref_name }}" \
+          --notes "## What's Changed
+        
+        This release includes:
+        - OpenAPI Navigator MCP server
+        - Support for both OpenAPI 3.0 and Swagger 2.0 specifications
+        - Comprehensive search and navigation tools
+        - Full test coverage and quality assurance
+        
+        ## Installation
+        
+        \`\`\`bash
+        pip install openapi-navigator
+        \`\`\`
+        
+        ## Usage
+        
+        \`\`\`bash
+        openapi-navigator
+        \`\`\`
+        
+        ## Documentation
+        
+        See the [README](https://github.com/${{ github.repository }}) for full documentation."
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref_name }}
-        body: |
-          ## What's Changed
-          
-          This release includes:
-          - OpenAPI Navigator MCP server
-          - Support for both OpenAPI 3.0 and Swagger 2.0 specifications
-          - Comprehensive search and navigation tools
-          - Full test coverage and quality assurance
-          
-          ## Installation
-          
-          ```bash
-          pip install openapi-navigator
-          ```
-          
-          ## Usage
-          
-          ```bash
-          openapi-navigator
-          ```
-          
-          ## Documentation
-          
-          See the [README](https://github.com/${{ github.repository }}) for full documentation.
-        draft: false
-        prerelease: false
