--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ name: Publish to PyPI
 on:
   release:
     types: [published]
+  workflow_dispatch:  # Manual trigger for testing
 
 jobs:
   publish:
@@ -27,4 +28,12 @@ jobs:
         run: uv build
       
       - name: Publish to PyPI
+        if: github.event_name == 'release'  # Only publish on actual releases
         run: uv publish
+      
+      - name: Test mode message
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "🧪 Test mode - no PyPI publishing"
+          echo "Package built successfully and ready for release"
+          echo "To publish: create a GitHub release with tag v0.1.0"
