--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "openapi-mcp"
+name = "openapi-navigator"
 version = "0.1.0"
 description = "OpenAPI Navigator - MCP server for navigating OpenAPI specifications"
 readme = "README.md"
